# CSE331-assignment-1

./: CMakeLists.txt  README.md  main.c  script_test-data_generator.py  sorting_results.csv
algorithms/: bubble_sort.c  cocktail_sort.c  comb_sort.c  heap_sort.c  insertion_sort.c  intro_sort.c  library_sort.c  merge_sort.c  quick_sort.c  selection_sort.c  sort.h  tim_sort.c  tournament_sort.c
data/: partial_1000.txt  partial_10000.txt  partial_100000.txt  random_1000.txt  random_10000.txt  random_100000.txt  reversed_1000.txt  reversed_10000.txt  reversed_100000.txt  sorted_1000.txt  sorted_10000.txt  sorted_100000.txt
